# MobilerizApi

./: README.md  alembic.ini  main.py  pyproject.toml  sqlite.db
alembic/: env.py
alembic/versions/: 90db855e25f1_initial_migration.py
app/: dependencies.py  main.py
app/adapters/databases/: __init__.py  postgresql_adapter.py  sqlite_adapter.py
app/adapters/external_apis/: __init__.py  product_api_adapter.py  vendor_api_adapter.py
app/adapters/kafka/: __init__.py  kafka_producer.py
app/api/: __init__.py
app/api/endpoints/: products.py  vendors.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/domain/models/: __init__.py  product.py  vendor.py
app/domain/schemas/: __init__.py  pagination.py  product.py  vendor.py
app/repositories/implementations/: __init__.py  sqlite_product_repository.py  sqlite_vendor_repository.py
app/repositories/interfaces/: __init__.py  product_repository.py  vendor_repository.py
app/services/: product_service.py  vendor_service.py
app/services/implementations/: __init__.py  product_service_impl.py  vendor_service_impl.py
app/services/interfaces/: __init__.py  product_service.py  vendor_service.py
app/utils/: flink_job.py  flink_test.py  helpers.py  sqlite.db
tests/adapters/: test_vendor_api_adapter.py
