[project]
name = "fastapiapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.8",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "apache-flink>=1.20.0",
    "asyncpg>=0.29.0",
    "disutils>=1.4.32.post2",
    "fastapi>=0.115.0",
    "kafka-python>=2.0.2",
    "psycopg>=3.2.3",
    "pydantic-settings>=2.5.2",
    "setuptools>=75.1.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "uvicorn>=0.31.0",
]
